misc: fix a few images/icons that look out of place

--- a/gitlab.user.styl
+++ b/gitlab.user.styl
@@ -3496,12 +3496,15 @@
   .wiki .anchor,
   .banner-graphic > svg,
   .explore-groups > .svg-container > svg,
-  img[src*="/assets/illustrations/"] {
-    filter: opacity(0.9) invert(0.9) hue-rotate(40deg) drop-shadow(1px 1px 3px var(--shadow)) !important;
+  img[src*="/assets/illustrations/"],
+  #subgroups_and_projects .empty-state svg {
+    filter: opacity(0.9) invert(0.9) hue-rotate(40deg) !important;
   }
 
   // * Invert `shadow-root (closed)` SVG icons.
   // TODO remove if/when fixed on upstream.
+  [data-page="users:show"] .created-icon,
+  [data-page="users:show"] .opened-icon,
   [class*="ci-status"] svg.s24,
   [class*="ci-status"]:not(#stageDropdown) svg.s16,
   svg.ic-upload {
